# D4G_project

./: .gitignore  README.md  archi_data_extractor.md  docker-compose.yml  pyproject.toml
app/: table_extraction.ipynb
data/: README.md  bilan-social-d-edf-sa-absenteisme.csv  bilan-social.pdf.md  random_data_with_normalized_absences.csv
data_extractor/: data_extractor.ipynb  downloader.py  extractor.py
scripts/: main.py
scripts/data_viz/: dashbord.ipynb  dashbord_skript.py
scripts/db/: D4G_inserts.py  database.ini  database_insertion.py  database_template.py  init_database.py
scripts/misc/: benjamin.ipynb
src/: __main__.py
src/data_extractor/: llama_parse_extractor.py  pdf_cutter.py  unstructured_extractor.py
src/data_viz/: dashbord.ipynb  dashbord_skript.py  db_interaction.py  streamlit_event_process.py
src/db/: D4G_inserts.py  database.ini  database_insertion.py  database_template.py
src/misc/: benjamin.ipynb
