[project]
name = "D4G"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghostwriter>=0.1",
    "camelot-py>=0.11.0",
    "ghostscript>=0.7",
    "ipykernel>=6.29.5",
    "jpype1>=1.5.0",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.40.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tabula-py>=2.10.0",
    "pydantic>=2.9.2",
    "extracttable>=2.4.0",
    "pypdf>=5.1.0",
]
